Third Practice commit

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,7 @@
     <string name="input_str">Ввести значение</string>
     <string name="calculate">Рассчитать</string>
     <string name="logout">Вывести отладку</string>
-    <string name="next_act">Перейти на вторую активность</string>
+    <string name="next_act">Передача данных</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
