--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="calculate">Рассчитать</string>
     <string name="logout">Вывести отладку</string>
     <string name="next_act">Передача данных</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="first_frag">Which type of list?</string>
 </resources>
